fix: github actions実行条件変更

--- a/.github/workflows/test-local-playground.yml
+++ b/.github/workflows/test-local-playground.yml
@@ -5,11 +5,13 @@ on:
     branches: [main]
     paths:
       - "**/*.go"
+      - "dist/*"
       - ".github/workflows/test-local-playground.yml"
   pull_request:
     branches: [main]
     paths:
       - "**/*.go"
+      - "dist/*"
       - ".github/workflows/test-local-playground.yml"
 
 jobs:
